# matters.global

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  AIFeatures.md  BRAINSTORMING.md  CLAUDE.md  DATASchema.md  DEPLOYMENT.md  MULTI_LABEL_SCHEMA.md  README.md  Tutorial.ipynb  assistant_functions.py  assistant_integration.py  assistant_manager.py  docker-compose.yml  embedding_providers.py  entity_resolution.py  environment.yml  example_usage.py  graph_problem_manager.py  matter_system.py  mattersglobal.py  openai_example.py  pyproject.toml  railway.toml  requirements.txt  server.py  start.sh  test_entity_resolution.py  test_graph_connection.py  test_graph_embeddings.py  test_multi_label.py  test_problem_condition_duality.py  websocket_server.py
.beads/: interactions.jsonl  issues.jsonl  metadata.json
backend/: .env.example  Dockerfile  assistant_functions.py  assistant_manager.py  entity_resolution.py  graph_problem_manager.py  mcp_server.py  railway.toml  requirements.txt  server.py  websocket_server.py
database/: railway.toml
docs/: CLAUDE.md  CNAME  DEPLOYMENT.md  index.html  multi-user.md  walkthrough.md
examples/: matters.example.json
frontend/: .env.example  .gitignore  package-lock.json  package.json  railway.toml  tsconfig.app.tsbuildinfo
neo4j/: Dockerfile  railway.toml
scripts/: sync_skill_to_skills_repo.sh
tests/: test_cli.py  test_embeddings.py  test_engine.py  test_extraction.py  test_identity.py  test_kenett_pipeline.py  test_llm_extraction.py  test_problem_condition_duality.py  test_reports.py  test_sharing.py  test_storage.py  test_web.py
(+41 files in other folders)
